tees-app/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tees-webapp-service
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
