tees-app/webapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tess-webapp-ingress
  namespace: teesapp
spec:
  ingressClassName: nginx
  rules:
    - host: teesapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
